--- a/XRDFromMP.ipynb
+++ b/XRDFromMP.ipynb
@@ -169,13 +169,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\thdwo\\projects\\pythonproject\\venv\\lib\\site-packages\\pymatgen\\ext\\matproj.py:559: FutureWarning: __init__ is deprecated\n",
+      "MaterialsProjectCompatibility will be updated with new correction classes as well as new values of corrections and uncertainties in 2020\n",
+      "  entries = MaterialsProjectCompatibility().process_entries(entries)\n"
+     ]
+    }
+   ],
    "source": [
     "from apimanage import somesomesome\n",
     "hehe = somesomesome(\"P2tLmbTfRg9uMJDqzXV\")\n",
     "hehe.get_entries_by_composition([\"Ni\", \"Fe\"])\n",
     "dic = hehe.xrd_dictionary"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "mp-1245108 ComputedEntry - Fe100        (Fe)\nEnergy (Uncorrected)     = -819.5018 eV (-8.1950  eV/atom)\nCorrection               = 0.0000    eV (0.0000   eV/atom)\nEnergy (Final)           = -819.5018 eV (-8.1950  eV/atom)\nEnergy Adjustments:\n  None\nParameters:\n  run_type               = GGA\n  is_hubbard             = False\n  pseudo_potential       = {'functional': 'PBE', 'labels': ['Fe_pv'], 'pot_type': 'paw'}\n  hubbards               = {}\n  potcar_symbols         = ['PBE Fe_pv']\n  oxide_type             = None\nData:\n  oxide_type             = None"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hehe.mp_entries[0]"
    ],
    "metadata": {
     "collapsed": false,
@@ -251,15 +284,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "import plotly\n",
-    "def fig_to_html(fig):\n",
-    "    config = config={'doubleClick': 'reset', 'displaylogo': False, 'scrollZoom': True}\n",
-    "    html = '<html><head><meta charset=\"utf-8\"/><script src=\"https://cdn.plot.ly/plotly-latest.min.js\"></script></head><body>'\n",
-    "    html += plotly.offline.plot(fig, output_type='div', include_plotlyjs='cdn', config = config)\n",
-    "    html += '</body></html>'\n",
-    "    return html"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
