--- a/test.ipynb
+++ b/test.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "import json\n",
@@ -160,6 +160,7 @@
     "    },\n",
     "    'properties': [\n",
     "        'pretty_formula',\n",
+    "        'material_id',\n",
     "        'formula',\n",
     "        'formation_energy_per_atom',\n",
     "    ]\n",
@@ -178,19 +179,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "data = response_content['response']\n",
+    "for dictionary in data:\n",
+    "    keys = dictionary['formula'].keys()\n",
+    "    values = dictionary['formula'].values()\n",
+    "    atom_sum = sum(values)\n",
+    "    values = [value / atom_sum for value in values]\n",
+    "    new_formula = dict(zip(keys, values))\n",
+    "    dictionary.update(new_formula)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'num_results': 17,\n 'valid_response': True,\n 'criteria': '{\"elements\": {\"$all\": [\"Ni\", \"Fe\"]}, \"nelements\": 2}',\n 'properties': '[\"pretty_formula\", \"formula\", \"formation_energy_per_atom\"]',\n 'response': [{'pretty_formula': 'Fe3Ni2',\n   'formula': {'Fe': 3.0, 'Ni': 2.0},\n   'formation_energy_per_atom': -0.03217178700000005},\n  {'pretty_formula': 'FeNi',\n   'formula': {'Fe': 1.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.0014148349999993926},\n  {'pretty_formula': 'Fe3Ni',\n   'formula': {'Fe': 3.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.12384976999999964},\n  {'pretty_formula': 'FeNi3',\n   'formula': {'Fe': 1.0, 'Ni': 3.0},\n   'formation_energy_per_atom': 0.018649790000000444},\n  {'pretty_formula': 'Fe2Ni',\n   'formula': {'Fe': 2.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.17854796999999914},\n  {'pretty_formula': 'FeNi3',\n   'formula': {'Fe': 1.0, 'Ni': 3.0},\n   'formation_energy_per_atom': -0.01106297749999996},\n  {'pretty_formula': 'FeNi3',\n   'formula': {'Fe': 1.0, 'Ni': 3.0},\n   'formation_energy_per_atom': -0.08976393749999989},\n  {'pretty_formula': 'Fe3Ni',\n   'formula': {'Fe': 3.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.08674733500000009},\n  {'pretty_formula': 'FeNi3',\n   'formula': {'Fe': 1.0, 'Ni': 3.0},\n   'formation_energy_per_atom': -0.07344370499999986},\n  {'pretty_formula': 'FeNi2',\n   'formula': {'Fe': 1.0, 'Ni': 2.0},\n   'formation_energy_per_atom': 0.1035910116666668},\n  {'pretty_formula': 'FeNi',\n   'formula': {'Fe': 1.0, 'Ni': 1.0},\n   'formation_energy_per_atom': -0.06723252000000013},\n  {'pretty_formula': 'Fe3Ni',\n   'formula': {'Fe': 3.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.025479124999999492},\n  {'pretty_formula': 'FeNi3',\n   'formula': {'Fe': 1.0, 'Ni': 3.0},\n   'formation_energy_per_atom': -0.0727314149999998},\n  {'pretty_formula': 'FeNi',\n   'formula': {'Fe': 1.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.01599944499999939},\n  {'pretty_formula': 'Fe3Ni',\n   'formula': {'Fe': 3.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.04401066749999938},\n  {'pretty_formula': 'Fe3Ni',\n   'formula': {'Fe': 3.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.042750612499999896},\n  {'pretty_formula': 'Fe2Ni',\n   'formula': {'Fe': 2.0, 'Ni': 1.0},\n   'formation_energy_per_atom': 0.044501696666665445}],\n 'created_at': '2021-03-09T02:21:20.035857',\n 'version': {'db': '2021_02_08', 'pymatgen': '2021.2.8.1', 'rest': '2.0'},\n 'copyright': 'Materials Project, 2021'}"
+      "text/plain": "[{'pretty_formula': 'Fe3Ni2',\n  'material_id': 'mp-1225009',\n  'formula': {'Fe': 3.0, 'Ni': 2.0},\n  'formation_energy_per_atom': -0.03217178700000005,\n  'Fe': 0.6,\n  'Ni': 0.4},\n {'pretty_formula': 'FeNi',\n  'material_id': 'mp-1224976',\n  'formula': {'Fe': 1.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.0014148349999993926,\n  'Fe': 0.5,\n  'Ni': 0.5},\n {'pretty_formula': 'Fe3Ni',\n  'material_id': 'mp-1224780',\n  'formula': {'Fe': 3.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.12384976999999964,\n  'Fe': 0.75,\n  'Ni': 0.25},\n {'pretty_formula': 'FeNi3',\n  'material_id': 'mp-1007854',\n  'formula': {'Fe': 1.0, 'Ni': 3.0},\n  'formation_energy_per_atom': 0.018649790000000444,\n  'Fe': 0.25,\n  'Ni': 0.75},\n {'pretty_formula': 'Fe2Ni',\n  'material_id': 'mp-1077745',\n  'formula': {'Fe': 2.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.17854796999999914,\n  'Fe': 0.6666666666666666,\n  'Ni': 0.3333333333333333},\n {'pretty_formula': 'FeNi3',\n  'material_id': 'mp-1225078',\n  'formula': {'Fe': 1.0, 'Ni': 3.0},\n  'formation_energy_per_atom': -0.01106297749999996,\n  'Fe': 0.25,\n  'Ni': 0.75},\n {'pretty_formula': 'FeNi3',\n  'material_id': 'mp-1418',\n  'formula': {'Fe': 1.0, 'Ni': 3.0},\n  'formation_energy_per_atom': -0.08976393749999989,\n  'Fe': 0.25,\n  'Ni': 0.75},\n {'pretty_formula': 'Fe3Ni',\n  'material_id': 'mp-1224827',\n  'formula': {'Fe': 3.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.08674733500000009,\n  'Fe': 0.75,\n  'Ni': 0.25},\n {'pretty_formula': 'FeNi3',\n  'material_id': 'mp-1079337',\n  'formula': {'Fe': 1.0, 'Ni': 3.0},\n  'formation_energy_per_atom': -0.07344370499999986,\n  'Fe': 0.25,\n  'Ni': 0.75},\n {'pretty_formula': 'FeNi2',\n  'material_id': 'mp-1072076',\n  'formula': {'Fe': 1.0, 'Ni': 2.0},\n  'formation_energy_per_atom': 0.1035910116666668,\n  'Fe': 0.3333333333333333,\n  'Ni': 0.6666666666666666},\n {'pretty_formula': 'FeNi',\n  'material_id': 'mp-2213',\n  'formula': {'Fe': 1.0, 'Ni': 1.0},\n  'formation_energy_per_atom': -0.06723252000000013,\n  'Fe': 0.5,\n  'Ni': 0.5},\n {'pretty_formula': 'Fe3Ni',\n  'material_id': 'mp-1007853',\n  'formula': {'Fe': 3.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.025479124999999492,\n  'Fe': 0.75,\n  'Ni': 0.25},\n {'pretty_formula': 'FeNi3',\n  'material_id': 'mp-1007855',\n  'formula': {'Fe': 1.0, 'Ni': 3.0},\n  'formation_energy_per_atom': -0.0727314149999998,\n  'Fe': 0.25,\n  'Ni': 0.75},\n {'pretty_formula': 'FeNi',\n  'material_id': 'mp-1224965',\n  'formula': {'Fe': 1.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.01599944499999939,\n  'Fe': 0.5,\n  'Ni': 0.5},\n {'pretty_formula': 'Fe3Ni',\n  'material_id': 'mp-999189',\n  'formula': {'Fe': 3.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.04401066749999938,\n  'Fe': 0.75,\n  'Ni': 0.25},\n {'pretty_formula': 'Fe3Ni',\n  'material_id': 'mp-1007862',\n  'formula': {'Fe': 3.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.042750612499999896,\n  'Fe': 0.75,\n  'Ni': 0.25},\n {'pretty_formula': 'Fe2Ni',\n  'material_id': 'mp-1224697',\n  'formula': {'Fe': 2.0, 'Ni': 1.0},\n  'formation_energy_per_atom': 0.044501696666665445,\n  'Fe': 0.6666666666666666,\n  'Ni': 0.3333333333333333}]"
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response_content"
+    "data\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'dd': 0.5217391304347826, 'bb': 0.4782608695652174}"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {\"dd\":12,\"bb\":11}\n",
+    "keys = a.keys()\n",
+    "values = a.values()\n",
+    "atom_sum = sum(values)\n",
+    "values = [value / atom_sum for value in values]\n",
+    "values\n",
+    "new = dict(zip(keys, values))\n",
+    "new"
    ],
    "metadata": {
     "collapsed": false,
