--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "exotic-thought",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'\\nurl = \"http://aflowlib.duke.edu/AFLOWDATA/LIB2_RAW/?species(Cu,Zr),nspecies(2),Egap(1*,*5),energy_cell\"\\n\"https://www.materialsproject.org/rest/v2/materials/Fe2O3/vasp?API_KEY=P2tLmbTfRg9uMJDqzXV\"\\nresponse=json.loads(urlopen(url).read().decode(\"utf-8\"))\\n'"
-      ]
+      "text/plain": "'\\nurl = \"http://aflowlib.duke.edu/AFLOWDATA/LIB2_RAW/?species(Cu,Zr),nspecies(2),Egap(1*,*5),energy_cell\"\\n\"https://www.materialsproject.org/rest/v2/materials/Fe2O3/vasp?API_KEY=P2tLmbTfRg9uMJDqzXV\"\\nresponse=json.loads(urlopen(url).read().decode(\"utf-8\"))\\n'"
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "searching-reporter",
    "metadata": {},
    "outputs": [],
    "source": [
     "#!/usr/bin/env python\n",
-    "\n",
+    "import requests\n",
     "SERVER=\"http://aflow.org\"\n",
     "API=\"/API/aflux/v1.0/?\"\n",
     "MATCHBOOK=\"species(Cu,Zr),nspecies(2),enthalpy_formation_atom,composition,species,Bravais_lattice_relax\"\n",
@@ -321,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "id": "modified-history",
    "metadata": {},
    "outputs": [],
@@ -346,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "id": "dying-import",
    "metadata": {},
    "outputs": [],
@@ -360,6 +358,29 @@
     "convex_list.append([1,0])\n",
     "convex_array = np.array(convex_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 0.        ,  0.        ],\n       [ 0.33333333, -0.14181   ],\n       [ 0.58823529, -0.167111  ],\n       [ 0.66666667, -0.168728  ],\n       [ 0.83333333, -0.126127  ],\n       [ 1.        ,  0.        ]])"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convex_array"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
